# masareef

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: blog-draft.md  masareef-prd-and-implementation-plan.md
masareef/: cli.py  config.py  db.py  models.py
masareef/services/: __init__.py  budgets.py  categories.py  csv_io.py  expenses.py  fx.py  reports.py
masareef/utils/: __init__.py  dates.py  money.py
scripts/: demo.ps1  demo.sh
tests/: conftest.py  test_categories.py  test_cli.py  test_csv_io.py  test_fx.py  test_money.py  test_reports.py  test_services.py
