[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "masareef"
version = "0.1.0"
description = "Egyptian expense tracker CLI with USD-anchored budgeting"
authors = [{ name = "Ammar" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "sqlalchemy>=2.0.0",
    "httpx>=0.27.0",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
    "build>=1.2.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
    "respx>=0.20.0",
]

[project.scripts]
masareef = "masareef.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["masareef"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=masareef --cov-report=term-missing"

[tool.coverage.report]
fail_under = 70
